--- a/Patient-Portal/src/components/history/history.css
+++ b/Patient-Portal/src/components/history/history.css
@@ -117,6 +117,12 @@
     color: var(--body_color);
 }
 
+.modal-info{
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+}
+
 .close-btn {
     /* margin-top: 10px; */
     border: none;
