--- a/Patient-Portal/src/index.css
+++ b/Patient-Portal/src/index.css
@@ -10,6 +10,8 @@
   --nav_background: #fff;
   --title_btn_hover: #f1f1f1;
   --place_color: none;
+  --book-color:white;
+  --book-doc-color:rgb(250, 250, 250);
 } 
 
 [data-theme="dark"] {
@@ -24,13 +26,16 @@
   --nav_background:#3a3740; 
   --title_btn_hover: rgb(128, 124, 134);
   --place_color: #c3c3c3;
+  --book-color:#716d7b;
+  --book-doc-color:#716d7b;
 }
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+    sans-serif; */
+  font-family: Roboto, Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
