--- a/Hospital/hospital/src/Senior-Doctor/components/Sidebar/Sidebar.css
+++ b/Hospital/hospital/src/Senior-Doctor/components/Sidebar/Sidebar.css
@@ -1,10 +1,13 @@
 .sidebar {
   display: flex;
+  width: 200px; /* Adjust the width as needed */
   flex-direction: column;
   position: relative;
   padding-top: 4rem;
   transition: all 300ms ease;
+  /* Add border to the right */
 }
+
 /* logo */
 .bars{
   display: none;
@@ -25,9 +28,12 @@
 }
 
 .logo > img {
-  width: 3rem;
-  height: 3rem;
+  width: 10%;
+  height: 15%;
 }
+
+
+
 
 
 /* menu */
@@ -46,7 +52,7 @@
   position: relative;
   transition: all 300ms ease;
   border-radius: 0.7rem;
-  font-size: 14px;
+  font-size: 19px;
 }
 
 .menuItem:hover {
@@ -57,6 +63,7 @@
   position: absolute;
   bottom: 2.3rem;
   width: 100%;
+  font-size: 20px;
 }
 
 .active {
