Design the muiltple page in senior doctor

--- a/Hospital/hospital/src/Senior-Doctor/components/Pages/DoctorUnderSenior/DoctorUnderSenior.css
+++ b/Hospital/hospital/src/Senior-Doctor/components/Pages/DoctorUnderSenior/DoctorUnderSenior.css
@@ -2,7 +2,8 @@
 .doctor-dialog-container {
   display: flex;
   justify-content: center;
-  margin-top: 50;
+  margin-top: 50px;
+  margin-left: 30px; /* Added 'px' unit */
 }
 
 .doctor-dialog {
