--- a/Hospital/hospital/src/Senior-Doctor/components/Pages/Appointments/Appointment.css
+++ b/Hospital/hospital/src/Senior-Doctor/components/Pages/Appointments/Appointment.css
@@ -72,12 +72,21 @@
 .btn-update:hover {
   background-color: #0056b3;
 }
+.search-container {
+  display: flex;
+  align-items: center; /* Align items vertically center */
+}
+
+.search-container h1 {
+  margin-right: 20px; /* Add some space between heading and input */
+}
 
 .search-input {
-  margin-bottom: 10px;
- margin-right:200px;
   padding: 8px;
   border: 1px solid #ddd;
   border-radius: 5px;
-  width: 100%;
+  width: 500px; /* Adjust the width as needed */
+  flex: 1; /* Take remaining space */
 }
+
+
