--- a/Hospital/hospital/src/Senior-Doctor/components/Pages/PatientsHistorys/PatientHistorys.css
+++ b/Hospital/hospital/src/Senior-Doctor/components/Pages/PatientsHistorys/PatientHistorys.css
@@ -1,14 +1,14 @@
 /* PatientHistorys.css */
 .patient-history-container {
-  margin: 60px auto;
-
+  margin: 20px auto 20px; /* Adjust top margin */
   max-width: 800px;
-  height: auto;;
-  padding: 10px;
+  height: auto;
+  padding: 5px;
   border: 2px solid #000000; /* Border color */
   border-radius: 20px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Shadow effect */
 }
+
 
 .patient-history-heading {
   font-size: 20px;
