--- a/Hospital/hospital/src/Senior-Doctor/components/Pages/UpdateAppointment/UpdateAppointment.css
+++ b/Hospital/hospital/src/Senior-Doctor/components/Pages/UpdateAppointment/UpdateAppointment.css
@@ -1,35 +1,80 @@
-.appointments-container {
+.dialog-box {
     margin: 20px auto;
+    max-width: 800px;
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  .update-appointment-heading {
+    font-weight: bold;
+    margin: 0;
+  }
+  
+  .form-column {
+    width: 50%;
     padding: 20px;
-    max-width: 600px;
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .image-column {
+    width: 50%;
+    padding: 20px;
+    text-align: center;
+  }
+  
+  .appointment-form {
     background-color: #f4f4f4;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-.appointment-form {
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .form-group {
     margin-bottom: 20px;
-}
-
-.form-group {
-    margin-bottom: 15px;
-}
-
-label {
-    display: block;
+    display: flex;
+    align-items: center;
+  }
+  
+  label {
+    display: inline-block;
     font-weight: bold;
-}
-
-input[type="text"],
-input[type="date"],
-input[type="time"] {
-    width: 100%;
+    width: 120px;
+    text-align: right; /* Align label text to the right */
+    margin-right: 20px;
+  }
+  
+  /* Adjusted margin to reduce the gap */
+  label[for="time"] {
+    margin-right: 50px;
+  }
+  
+  /* Reduce margin between Date label and Date input field */
+  label[for="date"],
+  label[for="endTime"] {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+  
+  input[type="text"],
+  input[type="date"],
+  input[type="time"] {
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
-}
-
-.btn-submit {
+    width: calc(50% - 130px); /* Equal width for both input fields */
+  }
+  
+  /* Add gap between label and input field for End Time */
+  label[for="endTime"] {
+    margin-right: 50px; /* Adjust as needed */
+  }
+  
+  /* Adjusted width for the submit and cancel buttons */
+  .btn-submit,
+  .btn-cancel {
     background-color: #007bff;
     color: #fff;
     border: none;
@@ -37,23 +82,12 @@ input[type="time"] {
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s ease;
-}
-
-.btn-submit:hover {
-    background-color: #0056b3;
-}
-
-.btn-cancel {
-    background-color: #dc3545;
-    color: #fff;
-    border: none;
-    padding: 10px 20px;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    margin-left: 10px;
-}
-
-.btn-cancel:hover {
-    background-color: #c82333;
-}
+    width: 100%;
+    max-width: 150px;
+  }
+  
+  .btn-submit:hover,
+  .btn-cancel:hover {
+    filter: brightness(85%); /* Reduce brightness on hover */
+  }
+  
