--- a/Hospital/hospital/src/Senior-Doctor/components/Pages/ViewPatientHistory/ViewPatientHistory.css
+++ b/Hospital/hospital/src/Senior-Doctor/components/Pages/ViewPatientHistory/ViewPatientHistory.css
@@ -1,68 +1,81 @@
-/* ViewPatientHistory.css */
+/* PatientHistorys.css */
 
-.doctor-dialog-container {
-  display: flex;
-  justify-content: center;
-  margin-top: 50px;
-  margin-left: 30px; /* Added 'px' unit */
-}
-
-.doctor-dialog {
-  width: 80%;
-  padding: 20px;
-  background-color: #f9f9f9;
+.patient-history-container {
+  margin: 60px auto;
+  max-width: 800px;
+  padding: 10px;
   border: 2px solid #000000;
-  border-radius: 10px;
+  border-radius: 20px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-.doctor-heading {
+.patient-history-heading {
   font-size: 24px;
   font-weight: bold;
   text-align: center;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 
 .search-container {
-  text-align: center;
-  margin-bottom: 10px;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
 }
 
 .search-input {
-  width: 100%;
+  padding: 10px;
+  width: 80%;
   max-width: 300px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.search-filters {
+  margin-left: 10px;
+}
+
+.search-filters select {
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 5px;
 }
 
-.doctor-table {
+.patient-history-table {
   width: 100%;
   border-collapse: collapse;
-  margin-top: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-.doctor-table th,
-.doctor-table td {
+.patient-history-table th,
+.patient-history-table td {
   border: 1px solid #000000;
   padding: 12px;
   text-align: left;
 }
 
-.doctor-table th {
+.patient-history-table th {
   background-color: #f2f2f2;
   font-weight: bold;
 }
 
-.back-link {
-  display: inline-block;
-  padding: 10px 20px;
-  background-color: #007bff;
-  color: #fff;
-  text-decoration: none;
-  border-radius: 5px;
+.patient-history-table tbody tr:nth-child(even) {
+  background-color: #f2f2f2;
 }
 
-.back-link:hover {
+.patient-history-table tbody tr:hover {
+  background-color: #e6e6e6;
+}
+
+.patient-history-btn {
+  background-color: #007bff;
+  color: #ffffff;
+  border: none;
+  padding: 8px 16px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.patient-history-btn:hover {
   background-color: #0056b3;
 }
