--- a/Hospital/hospital/src/Patient/components/history/history.css
+++ b/Hospital/hospital/src/Patient/components/history/history.css
@@ -3,24 +3,25 @@
     top: 90px;
     margin-left: 230px;
     margin-right: 20px;
-    background-color: white;
+    background-color: var(--div_background);
     border-radius: 12px;
-    box-shadow: 2px 2px 10px #9bafaf;
+    box-shadow: 2px 2px 10px var(--div_shadow);
     width: calc(100% - 250px); ;
     height: calc(100vh - 135px);
     text-align: center;
-    display: flex;
-    flex-direction: column;
+    /* display: flex; */
+    /* flex-direction: column; */
     padding-bottom: 15px;
 }
 
 .history-title{
+    color: var(--body_color);
     margin: 0px 30px;
     padding: 20px 0px;
-    text-decoration: underline;
+    /* text-decoration: underline; */
     position: sticky;
     top: 0px;
-    background-color: #fff;
+    background-color: var(--div_background);
 }
 
 .sub-parent{
@@ -48,15 +49,33 @@
 }
 
 .hist-content{
+    color: var(--body_color);
     display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background-color: #faeed1b1;
+    flex-direction: column;
+    align-items: left;
+    /* justify-content: space-between; */
+    background-color: var(--tile_color);
     margin: 14px 30px;
     border-radius: 12px;
     text-align: left;
     padding: 10px 20px;
+    /* width: 80%; */
     /* box-shadow: 1px 2px 2px rgba(0, 0, 0, 0.35); */
+}
+
+.up-apt1{
+    width:25%;
+    margin: 5px;
+    text-align: center;
+    padding-left: 10px;
+    display: block;
+}
+
+.gap{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0px;
 }
 
 .hist-apt {
@@ -67,37 +86,68 @@
     box-shadow: 1px 1px black;
 }
 
-
-.eye-btn{
-    width: 40px;
-    height: 40px ;
-    border: none;
-    padding: 5px;
-    background-color: transparent;
-    border-radius: 50%;
-    font-size: 20px;
-    margin-right: 60px;
-    /* transition: transfrom 0.5s ease-in; */
-}
-
-.eye-btn:hover {
-    /* background-color: #e7e7e7; */
-    cursor: pointer;
-}
-
-.eye-btn svg{
-    transition: transform 0.1s ease-in;
-}
-
-.eye-btn:hover svg{
-    transform: scale(1.2);
-}
-
-
-
 .past-modal-img{
     position: absolute;
     right: 30%;
     width: 100px;
     border: 1px solid rgb(172, 172, 172);
 }
+
+.modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent overlay */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.modal {
+    width: 700px;
+    background-color: var(--div_background);
+    padding: 20px;
+    border-radius: 12px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3); /* Add shadow effect */
+    max-height: 450px;
+    overflow-y: auto;
+    color: var(--body_color);
+}
+
+.modal-info{
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+}
+
+.close-btn {
+    /* margin-top: 10px; */
+    border: none;
+    background-color: transparent;
+    color: var(--body_color);
+}
+
+.close-btn svg{
+    font-size: 25px;
+}
+
+.close-btn svg:hover{
+    cursor: pointer;
+}
+
+.modal-header {
+    background-color: var(--div_background);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: sticky;
+    top: 0px;
+}
+
+.modal-body{
+    display: flex;
+}
+
