--- a/Hospital/hospital/src/Patient/components/home/Home.css
+++ b/Hospital/hospital/src/Patient/components/home/Home.css
@@ -25,9 +25,9 @@
 .top-left,
 .top-right {
     flex: 1; /* Equal width for both sides */
-    background-color: #ffffff;
+    background-color: var(--div_background);
     border-radius: 12px;
-    box-shadow: 2px 2px 10px #9bafaf;
+    box-shadow: 2px 2px 10px var(--div_shadow);
     overflow-y: auto;
     max-height: 300px;
     padding: 0px 10px;
@@ -70,8 +70,9 @@
     margin: 0px 0px 0px 0px;
     position: sticky;
     top: 0px;
-    background-color: #fff;
+    background-color: var(--div_background);
     /* box-shadow: 1px 1px rgb(216, 209, 209); */
+    color: var(--body_color);
 }
 
 .up-content-parent {
@@ -86,42 +87,62 @@
 }
 
 .up-content{
-    background-color: #faeed1b1;
+    background-color: var(--tile_color);
     width: 95%;
     border-radius: 12px;
     padding: 8px 2px;
     display: flex;
     flex-direction: column;
     margin-bottom: 20px;
+    color: var(--body_color);
 }   
 
 .up-apt{
-    margin: 2px;
+    margin: 5px;
     text-align: left;
     padding-left: 10px;
-    display: inline;
+    display: block;
 }
 
+.up-left{
+    background-color: var(--tile_color);
+    width: 95%;
+    border-radius: 12px;
+    padding: 8px 2px;
+    display: flex;
+    /* flex-direction: column; */
+    margin-bottom: 20px;
+    color: var(--body_color);
+    justify-content: space-between;
+}
 
 .bottom-content {
-    flex: 1; /* Take up remaining space equally */
-    background-color: white;
+    flex: 1; 
+    background-color: var(--div_background);
     border-radius: 12px;
-    box-shadow: 2px 2px 10px #9bafaf;
+    box-shadow: 2px 2px 10px var(--div_shadow);
     overflow-y: auto;
-    /* max-height: 290px; */
+    min-height: 290px;
     /* padding: 10px 10px; */
 }
 
+.bt-parent{
+        /* /* min-width: 95%; */
+        /* display: flex; */
+    /* overflow-x: scroll; */
+}
 
 .bt-content{
-    background-color: #faeed1b1;
+    display: block;
+    min-width: 90%;
+    background-color: var(--tile_color);
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 10px;
     margin: 0px 20px 20px 20px;
     border-radius: 12px;    
+    color: var(--body_color);
 }
 
 .doc-img {
@@ -138,17 +159,18 @@
 .view-btn{
     border: none;
     border-radius: 12px;
-    background-color: #fff;
+    background-color: var(--tile_btn);
     padding: 0px 20px;
     height: 45px;
     margin-right: 20px;
     /* box-shadow: 0.5px 0.5px 0.5px #9bafaf; */
     font-size: 14px;
+    color: var(--body_color);
 }
 
 .view-btn:hover{
     cursor: pointer;
-    background-color: #f1f1f1;
+    background-color: var(--title_btn_hover);
 }
 
 
@@ -165,9 +187,10 @@
     align-items: center;
 }
 
+
 .modal {
     width: 700px;
-    background-color: white;
+    background-color: var(--div_background);
     padding: 20px;
     border-radius: 12px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3); /* Add shadow effect */
@@ -179,6 +202,7 @@
     /* margin-top: 10px; */
     border: none;
     background-color: transparent;
+    color: var(--body_color);
 }
 
 .close-btn svg{
@@ -190,7 +214,7 @@
 }
 
 .modal-header {
-    background-color: #fff;
+    background-color: var(--div_background);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -200,5 +224,9 @@
 
 .modal-body{
     display: flex;
+}
+
+.modal-body-up{
+    /* display: flex; */
 }
 
