--- a/Hospital/hospital/src/Patient/components/navbar/navbar.css
+++ b/Hospital/hospital/src/Patient/components/navbar/navbar.css
@@ -1,90 +1,173 @@
 body{
-    background-color: rgb(215, 250, 248);
+  /* background-color: rgb(215, 250, 248); */
 }
 
 .nav-bar{
-    background-color: white;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 10px 10px 0px 10px;
-    border-radius: 14px;
-    height: 60px;
-    box-shadow: 2px 2px 10px #9bafaf;
+  background-color: var(--nav_background);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 10px 10px 0px 10px;
+  border-radius: 14px;
+  height: 60px;
+  box-shadow: 2px 2px 10px var(--div_shadow);
 }
 
 .logo-title{
-  display: flex;
-  align-items: center;
+display: flex;
+align-items: center;
 }
 
 .title-logo{
-    margin-left: 50px;
-    font-size: 24px;
-    text-decoration: none;
-    color: black;
-    font-weight: 700;
+  margin-left: 50px;
+  font-size: 24px;
+  text-decoration: none;
+  color: var(--body_color);
+  font-weight: 700;
 }
 
 .title-logo:hover{
-  cursor: pointer;
+cursor: pointer;
 }
 
 .usr-logo{
-    margin-right: 50px;
-    font-size: 25px;
+  margin-right: 50px;
+  font-size: 25px;
+  display: flex;
+  align-items: center;
+  /* color: var(--body_color); */
+}
+
+.usr-logo svg{
+color: var(--body_color);
 }
 
 .usr-logo:hover{
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .btn-talk{
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    background-color: white ;
-    font-size: 16px;
-    border: none;
-    border-radius: 12px;
-    margin: 20px 10px;
-    padding: 12px 15px;
-    transition: background-color 0.3s ease-in;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  background-color: var(--nav_background) ;
+  font-size: 16px;
+  border: none;
+  border-radius: 12px;
+  margin: 20px 10px;
+  padding: 12px 15px;
+  transition: background-color 0.3s ease-in;
+  color: var(--body_color);
 }
 
 .btn-talk:hover{
-  cursor: pointer;
-  background-color: #EFEFEFEF;
+cursor: pointer;
+background-color: var(--nav_background);
 }
 
 .btn-talk svg {
-  transition: transform 0.3s ease; /* Added transition effect for icon zoom */
+transition: transform 0.3s ease; /* Added transition effect for icon zoom */
 }
 
 .btn-talk:hover svg {
-  transform: scale(1.4); /* Zooms in the icon */
+transform: scale(1.4); /* Zooms in the icon */
 }
 
 .dropdown-menu {
-  padding: 10px;
-  width: 100px;
-  position: absolute;
-  top: 60px; 
-  right: 30px; 
-  background-color: #f9f9f9;
-  border-radius: 12px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-  display: flex;
-  flex-direction: column; 
+padding: 10px;
+width: 100px;
+position: absolute;
+top: 60px; 
+right: 30px; 
+background-color: var(--div_background);
+border-radius: 12px;
+box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+z-index: 1;
+display: flex;
+flex-direction: column; 
 }
 
 .dropdown-item {
-  text-decoration: none;
-  color: black;
-  padding: 5px 12px;
+text-decoration: none;
+color: var(--body_color);
+padding: 5px 12px;
 }
 
 .dropdown-item:hover {
-  background-color: #f1f1f1;
+background-color: var(--btn_hover);
+}
+
+
+
+.dark_mode {
+margin-top: -35px;
+margin-left: -100px;
+margin-right: 50px;
+}
+
+.dark_mode_label {
+width: 65px;
+height: 25px;
+position: relative;
+display: block;
+background: #ebebeb;
+border-radius: 200px;
+box-shadow: inset 0px 5px 15px rgba(0, 0, 0, 0.4),
+    inset 0px -5px 15px rgba(255, 255, 255, 0.4);
+cursor: pointer;
+transition: 0.3s;
+}
+.dark_mode_label:after {
+content: "";
+width: 23px;
+height: 20px;
+position: absolute;
+top: 3px;
+left: 3px;
+background: linear-gradient(180deg, #ffcc89, #d8860b);
+border-radius: 180px;
+box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
+transition: 0.3s;
+}
+.dark_mode_input {
+width: 0;
+height: 0;
+visibility: hidden;
+}
+.dark_mode_input:checked + .dark_mode_label {
+background: #242424;
+}
+.dark_mode_input:checked + .dark_mode_label:after {
+left: 62px;
+transform: translateX(-100%);
+background: linear-gradient(180deg, #777, #3a3a3a);
+}
+.dark_mode_label:active:after {
+width: 30px;
+}
+
+.dark_mode_label svg {
+position: absolute;
+width: 20px;
+top: 5px;
+z-index: 1;
+height: 24px;
+}
+.dark_mode_label svg.sun {
+height: 17px;
+left: 4px;
+fill: #fff;
+transition: 0.3s;
+}
+.dark_mode_label svg.moon {
+height: 17px;
+left: 40px;
+fill: #7e7e7e;
+transition: 0.3s;
+}
+.dark_mode_input:checked + .dark_mode_label svg.sun {
+fill: #7e7e7e;
+}
+.dark_mode_input:checked + .dark_mode_label svg.moon {
+fill: #fff;
 }
