--- a/Hospital/hospital/src/Patient/components/profile/profile.css
+++ b/Hospital/hospital/src/Patient/components/profile/profile.css
@@ -1,13 +1,93 @@
-.profile-content{
+/* .profile-content{
     position: fixed;
-    background-color: white;
+    background-color: var(--div_background);
     border-radius: 12px;
     width: calc(100% - 250px);
     height: calc(100vh - 120px);
     top: 90px;
     margin-left: 230px;
     margin-right: 20px;
-    box-shadow: 2px 2px 10px #9bafaf;
+    box-shadow: 2px 2px 10px var(--div_shadow);
     overflow-y: auto;
-}
+    color: var(--body_color);
+} */
 
+
+.profile-page {
+    position: fixed;
+    background-color: var(--div_background);
+    border-radius: 12px;
+    width: calc(100% - 290px);
+    height: calc(100vh - 160px);
+    padding: 20px;
+    top: 90px;
+    margin-left: 230px;
+    margin-right: 20px;
+    box-shadow: 2px 2px 10px var(--div_shadow);
+    color: var(--body_color);
+    font-family: Arial, sans-serif;
+  
+    h2 {
+      font-size: 24px;
+      margin-bottom: 20px;
+    }
+  
+    .profile-photo {
+      margin-bottom: 20px;
+  
+      img {
+        width: 150px; /* Adjust the size as needed */
+        height: 150px; /* Adjust the size as needed */
+        border-radius: 50%;
+        object-fit: cover;
+      }
+    }
+  
+    .personal-details {
+      input[type='text'],
+      input[type='email'],
+      input[type='password'] {
+        width: calc(100% - 40px);
+        margin-bottom: 10px;
+        padding: 10px;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        font-size: 16px;
+        transition: border-color 0.3s ease;
+  
+        &:focus {
+          outline: none;
+          border-color: #007bff;
+        }
+      }
+  
+      .update-details-btn,
+      .close-btn {
+        width: calc(49% - 5px);
+        padding: 10px;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
+      }
+  
+      .update-details-btn {
+        background-color: #007bff;
+        color: #fff;
+  
+        &:hover {
+          background-color: #0056b3;
+        }
+      }
+  
+      .close-btn {
+        background-color: #ccc;
+        color: #000;
+  
+        &:hover {
+          background-color: #b3b3b3;
+        }
+      }
+    }
+  }
+  
