integrated with the queue feature in the backend

--- a/Doctor-Portal/src/component/Navbardoctor/navbarstyle.css
+++ b/Doctor-Portal/src/component/Navbardoctor/navbarstyle.css
@@ -80,8 +80,8 @@ button.white{
     height: 60px;
     background-color:rgb(255, 255, 255);
     box-shadow: 0 0px 5px rgba(129, 133, 129, 0.86);
-    z-index: 999;
     position: sticky;
+    width: 100%;
     top: 0;
     left: 0;
 }
@@ -93,6 +93,8 @@ button.white{
     justify-content: space-around;
     align-content: center;
 }
+
+
 #navbar
 {
     display: flex;
@@ -121,7 +123,7 @@ button.white{
     width: 30%;
     height: 2px;
     background:rgb(0, 0, 0);
-    position: absolute;
+
     bottom: -4px;
     left: 20px;
 }
