--- a/Doctor-Portal/src/component/Doctorlogin/dloginstyle.css
+++ b/Doctor-Portal/src/component/Doctorlogin/dloginstyle.css
@@ -25,6 +25,8 @@
   position: relative;
   overflow: hidden;
   width: 768px;
+  display: flex;
+  flex-direction: row;
   max-width: 100%;
   min-height: 480px;
 }
@@ -46,6 +48,9 @@
   
   color: #333;
   font-size: 13px;
+  /* display: flex;
+  justify-content: center;
+  align-items: center; */
   text-decoration: none;
   margin: 15px 0 10px;
 }
@@ -74,16 +79,24 @@
   background-color: #9676bc;
 }
 
-.login-box form{
+.form-container{
+  width:50%;
+}
+.form-container form{
   
   background-color: transparent;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  padding: 0 40px;
+  padding: 0 20px;
+  margin-top: 10px;
+  width: 100%;
   height: 100%;
 }
+
+
+
 
 .login-box input{
   box-sizing: border-box;
@@ -98,42 +111,19 @@
   /* box-shadow: 1px 1px rgba(28, 28, 28, 0.35); */
 }
 
-.form-container{
-  
-  position: absolute;
-  top: 0;
+/* .form-container{
+  top: 10;
   height: 100%;
+  width: 60%;
   transition: all 0.6s ease-in-out;
-}
+} */
 
-.sign-in{
-  
-  left: 0;
-  width: 50%;
-  z-index: 2;
-}
-
-
-.login-box.active .sign-in{
-  transform: translateX(100%);
-}
-
-.login-box.active .sign-up{
-  transform: translateX(100%);
-  opacity: 1;
-  z-index: 5;
-  animation: move 0.6s;
-}
-
-@keyframes move{
-  0%, 49.99%{
-      opacity: 0;
-      z-index: 1;
-  }
-  50%, 100%{
-      opacity: 1;
-      z-index: 5;
-  }
+.toggle-container{
+  width:49%;
+  /* border: 5px solid black; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .social-icons{
@@ -157,75 +147,4 @@
 
 .social-icons svg:hover{
   cursor: pointer;
-}
-
-.toggle-container{
-  
-  position: absolute;
-  top: 0;
-  left: 50%;
-  width: 50%;
-  height: 100%;
-  overflow: hidden;
-  transition: all 0.6s ease-in-out;
-  border-radius: 150px 0 0 100px;
-  z-index: 1000;
-}
-
-
-.login-box.active .toggle-container{
-  transform: translateX(-100%);
-  border-radius: 0 150px 100px 0;
-}
-
-.toggle{
-  
-  background-color: rgb(157, 134, 188);
-  height: 100%;
-  /* background: linear-gradient(to right, #5c6bc0, #512da8); */
-  color: #fff;
-  position: relative;
-  left: -100%;
-  height: 100%;
-  width: 200%;
-  transform: translateX(0);
-  transition: all 0.6s ease-in-out;
-}
-
-.login-box.active .toggle{
-  transform: translateX(50%);
-}
-
-.toggle-panel{
-  box-sizing: border-box;
-  position: absolute;
-  width: 50%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  padding: 0 30px;
-  text-align: center;
-  top: 0;
-  transform: translateX(0);
-  transition: all 0.6s ease-in-out;
-}
-
-
-.toggle-left{
-  transform: translateX(-200%);
-}
-
-.login-box.active .toggle-left{
-  transform: translateX(0);
-}
-
-.toggle-right{
-  right: 0;
-  transform: translateX(0);
-}
-
-.login-box.active .toggle-right{
-  transform: translateX(200%);
 }
