--- a/Doctor-Portal/src/component/Patient/Patientstyle.css
+++ b/Doctor-Portal/src/component/Patient/Patientstyle.css
@@ -45,6 +45,7 @@
   margin-top: 15px;
   padding-left: 5px;
   padding-right: 5px;
+  height: 100px;
 }
 
 .PatientCnt {
@@ -91,6 +92,17 @@
   
   .PatientCnt button:hover {
     background-color: #0056b3;
+  }
+
+  .incomingstatus{
+    border: 1px solid black;
+    height: 100px;
+    width: 100%;
+  }
+
+  .callbuttons{
+    display: flex;
+    flex-direction: row;
   }
 
   .numpad {
