--- a/Doctor-Portal/src/component/Lobby/Lobbystyle.css
+++ b/Doctor-Portal/src/component/Lobby/Lobbystyle.css
@@ -9,10 +9,17 @@ background: linear-gradient(to left, #365523, #f1f3f1);
 }
 .LobbyCnt {
     display: flex;
+    flex-direction: column;
     max-width: 400px;
     margin-top: 200px;
     margin-left: 600px;
     padding: 20px;
+  }
+
+  .footer{
+    margin-top: 300px;
+    margin-left: 700px;
+    position: absolute;
   }
 
   
