--- a/Hospital/hospital/src/Patient/components/login/loginPage.css
+++ b/Hospital/hospital/src/Patient/components/login/loginPage.css
@@ -1,61 +1,98 @@
-*{
-    /* margin: 0; */
-    padding: 0;
-    /* box-sizing: border-box;  */
-    /* font-family: 'Montserrat', sans-serif; */
-}
 
-
-
-.background-video {
-    position: absolute;
-    top: 0;
-    left: 0;
+.screen{
     width: 100%;
-    height: 100%;
-    object-fit: cover;
-    z-index: -1; /* Ensure the video stays behind other content */
-  }
-
-
-.login-box{
-    background-color: #ffffffd4;
-    border-radius: 30px;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.35);
-    position: relative;
-    overflow: hidden;
-    width: 768px;
-    max-width: 100%;
-    min-height: 480px;
+    /* height: ;
+    background-color: #eee; */
 }
 
+
+
 .login-box{
+    background-color: #ffffff;
+    border-radius: 30px;
+    box-shadow: 0px 5px 15px rgb(0,0,0,0.35);
+    overflow: hidden;
+    width: 400px;
+    height: 480px;
     box-sizing: border-box;
     font-size: 14px;
     line-height: 20px;
     letter-spacing: 0.3px;
-    margin: 130px 330px;
+    margin: 130px auto;
+    display: flex;
+    justify-content: center;
 }
 
-.login-box span{
-    
-    font-size: 12px;
+.h-one{
+    font-size: 28px; /* Adjust the font size as needed */
+    font-weight: bold; /* Adjust the font weight as needed */
+    color: #333; /* Adjust the color as needed */
+    margin-bottom: 10px; /* Adjust the margin as needed */
+    line-height: 1.2; /* Adjust the line height as needed */
 }
 
-.login-box a{
-    
-    color: #333;
+.form-container, .sign-up-container{
+    /* position: absolute; */
+    top: 0;
+    height: 100%;
+    transition: all 0.6s ease-in-out;
+    text-align: center;
+}
+
+.sign-in-pw, .sign-in-otp{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.otp-email-container {
+    position: relative;
+  }
+
+  .otp-email-container input {
+    box-sizing: border-box;
+    background-color: #eeeeee5f;
+    border: 1px solid lightgray;
+    margin: 5px 0; 
+    padding: 10px;
     font-size: 13px;
-    text-decoration: none;
-    margin: 15px 0 10px;
+    border-radius: 8px;
+    width: 500px;
+    outline: none;
+    height: 36px;
+  }
+
+  .send-otp {
+    position: absolute;
+    top: 3px;
+    right: 10px;
+    transform: translateY(-50%);
+    font-size: 12px;
+    color: #000000;
+    cursor: pointer;
+  }
+
+.sign-in-pw span, .sign-in-otp span{
+    font-size: 12px;
+    margin-top: 20px;
 }
 
-.login-box button{
-    
+.sign-in-pw span a, .sign-in-otp span a, .sign-up-container span a{
+    text-decoration: underline;
+}
+
+.sign-in-pw a{
+    text-decoration: none;
+    color: #000;
+    margin: 10px 0px;
+}
+
+.sign-in-pw button, .sign-in-otp button, .sign-up-container button{
     background-color: #9d86bc;
     color: #fff;
     font-size: 12px;
-    padding: 10px 45px;
+    padding: 7px 35px;
     border: 1px solid transparent;
     border-radius: 8px;
     font-weight: 600;
@@ -63,177 +100,107 @@
     text-transform: uppercase;
     margin-top: 10px;
     cursor: pointer;
+    width: 140px;
 }
 
-.login-box button.hidden{
+.sign-in-pw button.hidden{
     background-color: transparent;
     border-color: #fff;
 }
 
-.login-box button:hover{
+.sign-in-pw button:hover, .sign-up-container button:hover{
+    background-color: #9676bc;
+}
+
+.sign-btn:hover{
     background-color: #9676bc;
 }
 
 .login-box form{
-    
     background-color: transparent;
     display: flex;
     align-items: center;
-    justify-content: center;
+    /* justify-content: start; */
     flex-direction: column;
-    padding: 0 40px;
+    padding: 40px;
     height: 100%;
+    /* margin-left: 10px; */
 }
 
-.login-box input{
+.sign-in-pw input, .sign-in-otp input, .sign-up-container input{
     box-sizing: border-box;
     background-color: #eeeeee5f;
     border: 1px solid lightgray;
-    margin: 8px 0;
+    margin: 5px 0;
     padding: 10px 15px;
     font-size: 13px;
     border-radius: 8px;
-    width: 100%;
+    width: 300px;
     outline: none;
+    height: 36px;
     /* box-shadow: 1px 1px rgba(28, 28, 28, 0.35); */
 }
 
-.form-container{
-    
-    position: absolute;
-    top: 0;
-    height: 100%;
-    transition: all 0.6s ease-in-out;
+.up-btns button{
+    background-color: #fff;
+    color: #000;
+    font-size: 12px;
+    padding: 10px 20px;
+    /* border-top: none; */
+    border:none;
+    border-radius: 0px;
+    font-weight: 600;
+    letter-spacing: 0.5px;
+    text-transform: uppercase;
+    margin-top: 10px;
+    cursor: pointer;
+
 }
 
-.sign-in{
-    
-    left: 0;
-    width: 50%;
-    z-index: 2;
+.up-btns button.active{
+    border-bottom: 2px solid #000;
 }
 
-
-.login-box.active .sign-in{
-    transform: translateX(100%);
+.up-btns button:hover{
+    background-color: #eee;
 }
 
-.login-box.active .sign-up{
-    transform: translateX(100%);
-    opacity: 1;
-    z-index: 5;
-    animation: move 0.6s;
-}
-
-@keyframes move{
-    0%, 49.99%{
-        opacity: 0;
-        z-index: 1;
-    }
-    50%, 100%{
-        opacity: 1;
-        z-index: 5;
-    }
-}
-
-.social-icons{
-    margin: 10px 0;
-}
-
-.social-icons svg{
-    box-sizing: border-box;
-    border: 1px solid #ccc;
-    border-radius: 50%;
+.genders{
     display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0 3px;
-    width: 38px;
-    height: 38px;
-    color: brown;
-    padding: 5px;
-    /* background-color: black; */
+    justify-content: space-evenly;
+    /* height: 20px; */
+    margin: 5px;
 }
 
-.social-icons svg:hover{
+.genders h5{
+    margin: 3px 0px;
+    padding: 5px 20px;
+    border: 1px solid lightgray;
+    border-radius: 5px;
+}
+
+.genders h5:hover{
     cursor: pointer;
 }
 
-.toggle-container{
-    
-    position: absolute;
-    top: 0;
-    left: 50%;
-    width: 50%;
-    height: 100%;
-    overflow: hidden;
-    transition: all 0.6s ease-in-out;
-    border-radius: 150px 0 0 100px;
-    z-index: 1000;
+.sign-up-container span{
+    font-size: 12px;
 }
 
 
-.login-box.active .toggle-container{
-    transform: translateX(-100%);
-    border-radius: 0 150px 100px 0;
-}
-
-.toggle{
-    
-    background-color: rgb(157, 134, 188);
-    height: 100%;
-    /* background: linear-gradient(to right, #5c6bc0, #512da8); */
-    color: #fff;
-    position: relative;
-    left: -100%;
-    height: 100%;
-    width: 200%;
-    transform: translateX(0);
-    transition: all 0.6s ease-in-out;
-}
-
-.login-box.active .toggle{
-    transform: translateX(50%);
-}
-
-.toggle-panel{
+.sign-up-container input[type="text"]{
     box-sizing: border-box;
-    position: absolute;
-    width: 50%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    padding: 0 30px;
-    text-align: center;
-    top: 0;
-    transform: translateX(0);
-    transition: all 0.6s ease-in-out;
+    background-color: #eeeeee5f;
+    border: 1px solid lightgray;
+    margin: 5px 0;
+    padding: 10px 15px;
+    font-size: 13px;
+    border-radius: 8px;
+    width: 300px;
+    outline: none;   
 }
 
-
-.toggle-left{
-    transform: translateX(-200%);
-}
-
-.login-box.active .toggle-left{
-    transform: translateX(0);
-}
-
-.toggle-right{
-    right: 0;
-    transform: translateX(0);
-}
-
-.login-box.active .toggle-right{
-    transform: translateX(200%);
-}
-.image img {
-    width: 400px; /* Adjust width as needed */
-    height: 500px; /* Maintain aspect ratio */
-    object-fit: cover;
-    float: right;
-  
-   /* Ensure the image covers the container */
+.gender.selected {
+    border: 1px solid #000000; /* Example: Change border color to blue */
+    background-color: #eaf9ff;
 }
