--- a/Hospital/hospital/src/index.css
+++ b/Hospital/hospital/src/index.css
@@ -6,7 +6,9 @@
 
 
 body {
-  font-family: 'Poppins', sans-serif;
+  font-family: Roboto, Helvetica, Arial, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 .slick-slide > div {
